--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
     <h1>git test</h1>
 
-    <script src="script.js"></script>
-    <!-- <script src="scripttest.js"></script> -->
+    <!-- <script src="script.js"></script> -->
+    <script src="scripttest.js"></script>
 
 </body>
 </html>
