--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <h1>git test</h1>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="js.js"></script>
+
 </body>
 </html>
